--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
 					<h1>Monetize seu <br> canal do Telegram</h1>
-					<p>Em menos de 5 minutos você poderá começar a cobrar pelo seu canal do Telegram através de planos de assinatura</p>
+					<p>Em menos de 5 minutos você poderá começar a cobrar pelo seu canal do Telegram através de planos
+						de assinatura</p>
 					<!-- <div class="download-button d-flex flex-row justify-content-start">
 						<div class="buttons flex-row d-flex">
 							<i class="fa fa-apple" aria-hidden="true"></i>
@@ -98,25 +99,32 @@
 							</div>
 						</div>
 						<div class="end-sec d-flex justify-content-between">
-							<form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
+							<form class="form-area" name="sentMessage" id="contactForm" novalidate>
 								<div class="row">
 									<div class="col-lg-12 form-group">
-										<input name="name" placeholder="Seu nome" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
-										 class="common-input mb-20 form-control" required="" type="text">
-		
-										<input name="email" placeholder="Seu e-mail" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
-										 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control"
-										 required="" type="email">
-		
-										<input name="subject" placeholder="Seu celular" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'"
-										 class="common-input mb-20 form-control" required="" type="text">
-		
-										 <input name="message" placeholder="Ramo de atuação" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'"
-										 class="common-input mb-20 form-control" required="" type="text">
+
+										<div class="form-group">
+											<input type="text" id="name" class="common-input mb-20 form-control"
+												placeholder="Nome" required="required">
+											<p class="help-block text-danger"></p>
+										</div>
+
+										<div class="form-group">
+											<input type="email" id="email" class="common-input mb-20 form-control" 
+												placeholder="Email" required="required">
+											<p class="help-block text-danger"></p>
+										</div>
+
+										<div class="form-group">
+											<input name="message" id="message" class="common-input mb-20 form-control" 
+												placeholder="Ramo de Atuação" required></input>
+											<p class="help-block text-danger"></p>
+										</div>
+
 									</div>
+									<div id="success" class="col-lg-12 d-flex justify-content-center"></div>
 									<div class="col-lg-12 d-flex justify-content-center">
-										<div class="alert-msg" style="text-align: left;"></div>
-										<button class="primary-btn" style="float: right;">Inscrever</button>
+            							<button type="submit" class="primary-btn">Solicitar Contato</button>
 									</div>
 								</div>
 							</form>
@@ -166,7 +174,8 @@
 				<div class="col-lg-6">
 					<div class="section-title text-center">
 						<h2>Já pensou em ganhar dinheiro com o Telegram?</h2>
-						<p>Com a nossa plataforma você pode criar um canal exclusivo para assinantes no Telegram e começar a monetizar o seu conteúdo.</p>
+						<p>Com a nossa plataforma você pode criar um canal exclusivo para assinantes no Telegram e
+							começar a monetizar o seu conteúdo.</p>
 					</div>
 				</div>
 			</div>
@@ -212,7 +221,9 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-7 home-about-left">
-					<iframe width="560" height="315" class="img-overlap" src="https://www.youtube.com/embed/g-biqclY4OQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" class="img-overlap" src="https://www.youtube.com/embed/g-biqclY4OQ"
+						frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 				</div>
 				<div class="col-lg-5 home-about-right">
 					<h1>
@@ -362,7 +373,8 @@
 			</div>
 			<div class="footer-bottom row text-center">
 				<p class="footer-text m-0 col-lg-12 col-md-12">
-					<script>document.write(new Date().getFullYear());</script> &copy; Membr.club - Todos os direitos reservados
+					<script>document.write(new Date().getFullYear());</script> &copy; Membr.club - Todos os direitos
+					reservados
 				</p>
 			</div>
 		</div>
@@ -389,6 +401,8 @@
 	<script src="js/waypoints.min.js"></script>
 	<script src="js/mail-script.js"></script>
 	<script src="js/main.js"></script>
+	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+	<script type="text/javascript" src="js/contact_me.js"></script>
 
 </body>
 
