--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 <html lang="zxx" class="no-js">
 
 <head>
-	<!-- Mobile Specific Meta -->
+
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
+	<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 	<meta name="author" content="codepixer">
-	<!-- Meta Description -->
 	<meta name="description" content="">
-	<!-- Meta Keyword -->
 	<meta name="keywords" content="">
-	<!-- meta character set -->
 	<meta charset="UTF-8">
-	<!-- Site Title -->
+
 	<title>Membr.Club</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
-	<!--
-			CSS
-			============================================= -->
 	<link rel="stylesheet" href="css/linearicons.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -44,9 +52,9 @@
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li class="menu-active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">Como Funciona</a></li>
-						<li><a href="pricing.html">Preços</a></li>
-						<li><a href="contact.html">Contato</a></li>
+						<li><a href="#feature">Como Funciona</a></li>
+						<li><a href="#pricing">Preços</a></li>
+						<li><a href="#home">Contato</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -55,7 +63,7 @@
 	<!-- end header Area -->
 
 	<!-- start banner Area -->
-	<section class="home-banner-area">
+	<section id="home" class="home-banner-area">
 		<div class="container">
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
@@ -168,7 +176,7 @@
 	<!-- End fact Area -->
 
 	<!-- Start feature Area -->
-	<section class="feature-area section-gap-top">
+	<section id="feature" class="feature-area section-gap-top">
 		<div class="container">
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
@@ -217,7 +225,7 @@
 	<!-- End feature Area -->
 
 	<!-- Start about Area -->
-	<section class="about-area">
+	<section id="about" class="about-area">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-7 home-about-left">
@@ -241,7 +249,7 @@
 
 
 	<!-- Start Pricing Area -->
-	<section class="pricing-area">
+	<section id="pricing" class="pricing-area">
 		<div class="container">
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
@@ -340,9 +348,9 @@
 				<div class="col-lg-3 col-md-6 single-footer-widget">
 					<h4>Produto</h4>
 					<ul>
-						<li><a href="#">Cadastro</a></li>
-						<li><a href="#">Como funciona</a></li>
-						<li><a href="#">Benefícios</a></li>
+						<li><a href="#home">Cadastro</a></li>
+						<li><a href="#feature">Como funciona</a></li>
+						<li><a href="#about">Benefícios</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-6 single-footer-widget">
@@ -357,16 +365,15 @@
 					<h4>Aprenda</h4>
 					<ul>
 						<li><a href="#">Conteúdos</a></li>
-						<li><a href="#">Blog</a></li>
 						<li><a href="#">Contato</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-6 single-footer-widget">
 					<h4>Redes Sociais</h4>
 					<ul>
-						<li><i class="fa fa-instagram"></i>&nbsp;&nbsp;<a href="#">Instagram</a></li>
+						<li><i class="fa fa-instagram"></i>&nbsp;&nbsp;<a href="https://www.instagram.com/membrclub/">Instagram</a></li>
 						<li><i class="fa fa-telegram"></i>&nbsp;&nbsp;<a href="#">Telegram</a></li>
-						<li><i class="fa fa-youtube"></i>&nbsp;&nbsp;<a href="#">You Tube</a></li>
+						<li><i class="fa fa-youtube"></i>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCQePbo0vZhka1-28rR-EM0w">You Tube</a></li>
 					</ul>
 
 				</div>
