--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
 
+	<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+
+	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
 </head>
 
 <body>
@@ -107,32 +111,34 @@
 							</div>
 						</div>
 						<div class="end-sec d-flex justify-content-between">
-							<form class="form-area" name="sentMessage" id="contactForm" novalidate>
+							<form class="pageclip-form" action="https://send.pageclip.co/ZCFev6mRVTW1PGwYpyXYDu1GnaI1LaGG/Leads" method="POST">
 								<div class="row">
 									<div class="col-lg-12 form-group">
 
 										<div class="form-group">
-											<input type="text" id="name" class="common-input mb-20 form-control"
-												placeholder="Nome" required="required">
+											<input type="text" name="name" class="common-input mb-20 form-control" placeholder="Nome" required="required" />
 											<p class="help-block text-danger"></p>
 										</div>
 
 										<div class="form-group">
-											<input type="email" id="email" class="common-input mb-20 form-control" 
-												placeholder="Email" required="required">
+											<input type="email" name="email" class="common-input mb-20 form-control" placeholder="Email" required="required"/>
 											<p class="help-block text-danger"></p>
 										</div>
 
 										<div class="form-group">
-											<input name="message" id="message" class="common-input mb-20 form-control" 
-												placeholder="Ramo de Atuação" required></input>
+											<input type="text" name="phone" class="common-input mb-20 form-control" placeholder="Telefone" required="required"/>
+											<p class="help-block text-danger"></p>
+										</div>
+
+										<div class="form-group">
+											<input type="text" name="segment" class="common-input mb-20 form-control" placeholder="Area de atuação" required="required"/>
 											<p class="help-block text-danger"></p>
 										</div>
 
 									</div>
 									<div id="success" class="col-lg-12 d-flex justify-content-center"></div>
 									<div class="col-lg-12 d-flex justify-content-center">
-            							<button type="submit" class="primary-btn">Solicitar Contato</button>
+            							<button type="submit" class="primary-btn"><span>Enviar</span>
 									</div>
 								</div>
 							</form>
