--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 	<link rel="stylesheet" href="css/hexagons.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+
+	<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+
+
+
 </head>
 
 <body>
@@ -106,6 +111,7 @@
 							</div>
 						</div>
 						<div class="end-sec d-flex justify-content-between">
+
 							<form class="pageclip-form" action="https://send.pageclip.co/ZCFev6mRVTW1PGwYpyXYDu1GnaI1LaGG/Leads" method="POST">
 								<div class="row">
 									<div class="col-lg-12 form-group">
@@ -121,11 +127,6 @@
 										</div>
 
 										<div class="form-group">
-											<input type="text" name="phone" class="common-input mb-20 form-control" placeholder="Telefone" required="required"/>
-											<p class="help-block text-danger"></p>
-										</div>
-
-										<div class="form-group">
 											<input type="text" name="segment" class="common-input mb-20 form-control" placeholder="Area de atuação" required="required"/>
 											<p class="help-block text-danger"></p>
 										</div>
@@ -137,6 +138,7 @@
 									</div>
 								</div>
 							</form>
+							
 						</div>
 					</div>
 				</div>
@@ -410,6 +412,9 @@
 	<script src="js/mail-script.js"></script>
 	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
+	<script type="text/javascript" src="js/contact_me.js"></script>
+	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
 </body>
 
 </html>
