--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 						<li><a href="#feature">Como Funciona</a></li>
 						<li><a href="#pricing">Preços</a></li>
 						<li><a href="#home">Contato</a></li>
+						<li><a href="#footer">Redes Sociais</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -72,8 +73,7 @@
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
 					<h1>Monetize seu <br> canal do Telegram</h1>
-					<p>Em menos de 5 minutos você poderá começar a cobrar pelo seu canal do Telegram através de planos
-						de assinatura</p>
+					<p>Saiba como transformar o seu canal do Telegram em uma poderosa comunidade de membros engajados</p>
 					<!-- <div class="download-button d-flex flex-row justify-content-start">
 						<div class="buttons flex-row d-flex">
 							<i class="fa fa-apple" aria-hidden="true"></i>
@@ -103,11 +103,11 @@
 					<div class="subscribe">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Quer usar?</h4>
-								<p>Entraremos em contato</p>
+								<h4>Ficou interessado?</h4>
+								<p>Envie seus dados</p>
 							</div>
 							<div class="top-right">
-								<h1><i class="lnr lnr-alarm" aria-hidden="true"></i></h1>
+								<h1><i class="lnr lnr-envelope" aria-hidden="true"></i></h1>
 							</div>
 						</div>
 						<div class="end-sec d-flex justify-content-between">
@@ -134,7 +134,7 @@
 									</div>
 									<div id="success" class="col-lg-12 d-flex justify-content-center"></div>
 									<div class="col-lg-12 d-flex justify-content-center">
-            							<button type="submit" class="primary-btn"><span>Enviar</span>
+            							<button type="submit" class="primary-btn"><span>Receber Contato</span>
 									</div>
 								</div>
 							</form>
@@ -184,8 +184,8 @@
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-6">
 					<div class="section-title text-center">
-						<h2>Já pensou em ganhar dinheiro com o Telegram?</h2>
-						<p>Com a nossa plataforma você pode criar um canal exclusivo para assinantes no Telegram e
+						<h2>Produz conteúdo e tem audiência engajada?</h2>
+						<p>Com a nossa plataforma você pode criar um canal exclusivo para membros assinantes e
 							começar a monetizar o seu conteúdo.</p>
 					</div>
 				</div>
@@ -217,7 +217,7 @@
 							<span class="lnr lnr-smartphone"></span>
 							<h3>Produza conteúdo Exclusivo para os Assinantes</h3>
 						</a>
-						<p>Turbine seu canal com conteúdos relevantes que irão engajar sua audiência.
+						<p>Turbine seu canal com conteúdos relevantes que irão potencializar o engajamento da sua audiência.
 						</p>
 					</div>
 				</div>
@@ -238,11 +238,9 @@
 				</div>
 				<div class="col-lg-5 home-about-right">
 					<h1>
-						Quais as vantagens<br>
-						de utilizar nossa<br>
-						plataforma?
+						Por que utilizar a plataforma membr.club?
 					</h1>
-					<p>Assista o vídeo e veja como vamos te ajudar a monetizar o seu canal do Telegram</p>
+					<p>Assista o vídeo e veja como vamos te ajudar a fazer do seu canal do Telegram uma poderosa ferramenta de engajamento.</p>
 					<a class="primary-btn text-uppercase" href="#">Quero usar</a>
 				</div>
 			</div>
@@ -273,12 +271,13 @@
 								<p>Para começar</p>
 							</div>
 							<div class="top-right">
-								<h1>R$ 00</h1>
+								<h6>Assinatura</h6>
+								<h1>Grátis</h1>
 							</div>
 						</div>
 						<div class="end-sec">
 							<ul>
-								<li>Apenas 1 Canal / Grupo</li>
+								<li>Apenas 1 Canal ou Grupo</li>
 								<li>Até 30 assinaturas por canal</li>
 								<li>Apenas Planos Pagos</li>
 								<li>Gestão de Membros</li>
@@ -301,11 +300,10 @@
 						</div>
 						<div class="end-sec">
 							<ul>
-								<li>Até 3 Canais / Grupos</li>
+								<li>Até 3 Canais ou Grupos</li>
 								<li>Assinaturas Ilimitadas por canal</li>
 								<li>Planos Pagos e Gratuitos</li>
 								<li>Gestão de Membros</li>
-								<li>Captação de Leads</li>
 								<li>Custo de processamento: 5%</li>
 							</ul>
 							<button class="primary-btn price-btn mt-20">Quero este</button>
@@ -313,7 +311,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<div class="single-price">
+					<div class="single-price-off">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
 								<h4>membr.pro</h4>
@@ -325,13 +323,13 @@
 						</div>
 						<div class="end-sec">
 							<ul>
-								<li>Canais / Grupos ilimitados</li>
+								<li>Canais e Grupos ilimitados</li>
 								<li>Assinaturas Ilimitadas por canal</li>
-								<li>Personalização de Planos</li>
 								<li>Planos Pagos e Gratuitos</li>
 								<li>Gestão de Membros</li>
-								<li>Captação de Leads</li>
-								<li>Agendamento de Posts</li>
+								<li>Teste grátis para o assinante</li>
+								<li>Captação de leads</li>
+								<li>Agendamento de posts</li>
 								<li>Custo de processamento: 4%</li>
 							</ul>
 							<button class="primary-btn price-btn mt-20">Em breve</button>
@@ -345,7 +343,7 @@
 	<!-- End Pricing Area -->
 
 	<!-- Start Footer Area -->
-	<footer class="footer-area section-gap">
+	<footer id="footer" class="footer-area section-gap">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 single-footer-widget">
