--- a/index.html
+++ b/index.html
@@ -127,7 +127,26 @@
 										</div>
 
 										<div class="form-group">
-											<input type="text" name="segment" class="common-input mb-20 form-control" placeholder="Area de atuação" required="required"/>
+											<select name="segment" class="common-input mb-20 form-control" required="required">
+											<option value="" selected disabled hidden>Segmento</option>
+											<option value="Alimentos">Alimentos</option>
+											<option value="Arte e Religião">Arte e Religião</option>
+											<option value="Bebidas">Bebidas</option>
+											<option value="Consultoria">Consultoria</option>
+											<option value="Educação">Educação</option>
+											<option value="Entretenimento">Entretenimento</option>
+											<option value="Esportes">Esportes</option>
+											<option value="Eventos">Eventos</option>
+											<option value="Financeiro">Financeiro</option>
+											<option value="Games">Games</option>
+											<option value="Imoveis e Construção">Imoveis e Construção</option>
+											<option value="Marketing e Publicidade">Marketing e Publicidade</option>
+											<option value="Moda e Beleza">Moda e Beleza"</option>
+											<option value="Saúde e Fitness">Saúde e Fitness</option>
+											<option value="Software">Software</option>
+											<option value="Turismo">Turismo</option>
+											<option value="Outro Segmento">Outro Segmento</option>
+											</select>
 											<p class="help-block text-danger"></p>
 										</div>
 
