--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
 											<p class="help-block text-danger"></p>
 										</div>
 
+										<div class="form-group">
+											<select name="plan" class="common-input mb-20 form-control" required="required">
+											<option value="" selected disabled hidden>Qual plano te interessa?</option>
+											<option value="Alimentos">Membr.free</option>
+											<option value="Arte e Religião">Membr.club</option>
+											</select>
+											<p class="help-block text-danger"></p>
+										</div>
+
 									</div>
 									<div id="success" class="col-lg-12 d-flex justify-content-center"></div>
 									<div class="col-lg-12 d-flex justify-content-center">
@@ -302,7 +311,7 @@
 								<li>Gestão de Membros</li>
 								<li>Custo de processamento: 6%</li>
 							</ul>
-							<button class="primary-btn price-btn mt-20">Quero este</button>
+							<a href="#home"><button class="primary-btn price-btn mt-20">Quero este</button></a>
 						</div>
 					</div>
 				</div>
@@ -325,7 +334,7 @@
 								<li>Gestão de Membros</li>
 								<li>Custo de processamento: 5%</li>
 							</ul>
-							<button class="primary-btn price-btn mt-20">Quero este</button>
+							<a href="#home"><button class="primary-btn price-btn mt-20">Quero este</button></a>
 						</div>
 					</div>
 				</div>
@@ -426,10 +435,8 @@
 	<script src="js/hexagons.min.js"></script>
 	<script src="js/jquery.nice-select.min.js"></script>
 	<script src="js/waypoints.min.js"></script>
-	<script src="js/mail-script.js"></script>
 	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
-	<script type="text/javascript" src="js/contact_me.js"></script>
 	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
 </body>
