--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
 										<div class="form-group">
 											<select name="plan" class="common-input mb-20 form-control" required="required">
 											<option value="" selected disabled hidden>Qual plano te interessa?</option>
-											<option value="Alimentos">Membr.free</option>
-											<option value="Arte e Religião">Membr.club</option>
+											<option value="free">Membr.free</option>
+											<option value="club">Membr.club</option>
+											<option value="pro">Membr.pro</option>
 											</select>
 											<p class="help-block text-danger"></p>
 										</div>
