--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 					<h4>Redes Sociais</h4>
 					<ul>
 						<li><i class="fa fa-instagram"></i>&nbsp;&nbsp;<a href="https://www.instagram.com/membrclub/">Instagram</a></li>
-						<li><i class="fa fa-telegram"></i>&nbsp;&nbsp;<a href="#">Telegram</a></li>
+						<li><i class="fa fa-telegram"></i>&nbsp;&nbsp;<a href="https://t.me/membrclub">Telegram</a></li>
 						<li><i class="fa fa-youtube"></i>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCQePbo0vZhka1-28rR-EM0w">You Tube</a></li>
 					</ul>
 
