--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 									</div>
 									<div id="success" class="col-lg-12 d-flex justify-content-center"></div>
 									<div class="col-lg-12 d-flex justify-content-center">
-            							<button type="submit" class="primary-btn pageclip-form__submit"><span>Receber Contato</span>
+            							<button type="submit" class="primary-btn pageclip-form__submit--dark-loader"><span>Receber Contato</span>
 									</div>
 								</div>
 							</form>
