--- a/index.html
+++ b/index.html
@@ -438,14 +438,7 @@
 	<script src="js/waypoints.min.js"></script>
 	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
-	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8">
-		var form = document.querySelector('.pageclip-form')
-			Pageclip.form(form, {
-  				onSubmit: function (event) { },
-  				onResponse: function (error, response) { },
-  				successTemplate: '<span>Solicitação enviada. Em breve nossa equipe entrará em contato.</span>'
-			})
-	</script>
+	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
 </body>
 
