--- a/index.html
+++ b/index.html
@@ -439,6 +439,13 @@
 	<script src="js/main.js"></script>
 	<script type="text/javascript" src="js/jqBootstrapValidation.js"></script>
 	<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+	<script>var form = document.querySelector('.pageclip-form')
+		Pageclip.form(form, {
+  		onSubmit: function (event) { },
+  		onResponse: function (error, response) { },
+  		successTemplate: '<span>Dados enviados com sucesso! Em breve nosso time entrará em contato com você.</span>'
+		})
+	</script>
 
 </body>
 
