--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 		Pageclip.form(form, {
   		onSubmit: function (event) { },
   		onResponse: function (error, response) { },
-  		successTemplate: '<span>Dados enviados com sucesso! Em breve nosso time entrará em contato com você.</span>'
+  		successTemplate: '<span>Sucesso. Retornaremos o contato em breve.</span>'
 		})
 	</script>
 
