--- a/v2.html
+++ b/v2.html
@@ -34,7 +34,7 @@
     rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
     crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main-v2.css">
 
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
   </head>
@@ -239,7 +239,7 @@
       </div>
     </section>
 
-    <section id="planos" class="pricing-area">
+    <section id="planos" class="pricing-area section-gap-top">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
