--- a/v2.html
+++ b/v2.html
@@ -398,7 +398,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
     integrity="sha256-P93G0oq6PBPWTP1IR8Mz/0jHHUpaWL0aBJTKauisG7Q=" crossorigin="anonymous"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/main-v2.js"></script>
     <script>
       feather.replace()
     </script>
