--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@
 						</div>
 						<div class="end-sec">
 							<ul>
-								<li>Apenas 1 Canal ou Grupo</li>
-								<li>Até 30 assinaturas por canal</li>
+								<li>Apenas 1 Canal ou Grupo por conta</li>
+								<li>Até 100 assinaturas por Canal ou Grupo</li>
 								<li>Apenas Planos Pagos</li>
 								<li>Gestão de Membros</li>
-								<li>Custo de processamento: 6%</li>
+								<li>Custo de processamento: 8,99% + R$ 0,50 por transação</li>
 							</ul>
 							<a href="#home"><button class="primary-btn price-btn mt-20">Quero este</button></a>
 						</div>
@@ -329,11 +329,13 @@
 						</div>
 						<div class="end-sec">
 							<ul>
-								<li>Até 3 Canais ou Grupos</li>
-								<li>Assinaturas Ilimitadas por canal</li>
+								<li>Até 3 Canais ou Grupos por conta</li>
+								<li>Assinaturas Ilimitadas por Canal ou Grupo</li>
 								<li>Planos Pagos e Gratuitos</li>
 								<li>Gestão de Membros</li>
-								<li>Custo de processamento: 5%</li>
+								<li>Teste grátis para o assinante</li>
+								<li>Captação de leads</li>
+								<li>Custo de processamento: 8,99% + R$ 0,50 por transação</li>
 							</ul>
 							<a href="#home"><button class="primary-btn price-btn mt-20">Quero este</button></a>
 						</div>
@@ -353,13 +355,13 @@
 						<div class="end-sec">
 							<ul>
 								<li>Canais e Grupos ilimitados</li>
-								<li>Assinaturas Ilimitadas por canal</li>
+								<li>Assinaturas Ilimitadas por Canal ou Grupo</li>
 								<li>Planos Pagos e Gratuitos</li>
 								<li>Gestão de Membros</li>
 								<li>Teste grátis para o assinante</li>
 								<li>Captação de leads</li>
 								<li>Agendamento de posts</li>
-								<li>Custo de processamento: 4%</li>
+								<li>Custo de processamento: Personalizado</li>
 							</ul>
 							<button class="primary-btn price-btn mt-20">Em breve</button>
 						</div>
