--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@
 						<div class="end-sec">
 							<ul>
 								<li>Apenas 1 Canal ou Grupo por conta</li>
-								<li>Até 100 assinaturas por Canal ou Grupo</li>
+								<li>Até 100 assinaturas por Canal</li>
 								<li>Apenas Planos Pagos</li>
 								<li>Gestão de Membros</li>
-								<li>Custo de processamento: 8,99% + R$ 0,50 por transação</li>
+								<li>8,99% + R$ 0,50 por transação</li>
+								<li>Recebimento em 30 dias</li>
 							</ul>
 							<a href="#home"><button class="primary-btn price-btn mt-20">Quero este</button></a>
 						</div>
@@ -335,7 +336,8 @@
 								<li>Gestão de Membros</li>
 								<li>Teste grátis para o assinante</li>
 								<li>Captação de leads</li>
-								<li>Custo de processamento: 8,99% + R$ 0,50 por transação</li>
+								<li>8,99% + R$ 0,50 por transação</li>
+								<li>Recebimento em 30 dias</li>
 							</ul>
 							<a href="#home"><button class="primary-btn price-btn mt-20">Quero este</button></a>
 						</div>
@@ -361,7 +363,8 @@
 								<li>Teste grátis para o assinante</li>
 								<li>Captação de leads</li>
 								<li>Agendamento de posts</li>
-								<li>Custo de processamento: Personalizado</li>
+								<li>Preço Personalizado</li>
+								<li>Recebimento Personalizado</li>
 							</ul>
 							<button class="primary-btn price-btn mt-20">Em breve</button>
 						</div>
