--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 		<div class="container">
 			<div class="row fullscreen d-flex align-items-center justify-content-between">
 				<div class="home-banner-content col-lg-6 col-md-6">
-					<h1>Monetize seu <br> canal do Telegram</h1>
-					<p>Saiba como transformar o seu canal do Telegram em uma poderosa comunidade de membros engajados</p>
+					<h1>Monetize seu <br> conhecimento</h1>
+					<p>Saiba como transformar o seu canal privado do Telegram em uma poderosa comunidade de membros engajados</p>
 					<!-- <div class="download-button d-flex flex-row justify-content-start">
 						<div class="buttons flex-row d-flex">
 							<i class="fa fa-apple" aria-hidden="true"></i>
@@ -103,7 +103,7 @@
 					<div class="subscribe">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
-								<h4>Ficou interessado?</h4>
+								<h4>Quero me cadastrar</h4>
 								<p>Envie seus dados</p>
 							</div>
 							<div class="top-right">
@@ -163,7 +163,7 @@
 									</div>
 									<div id="success" class="col-lg-12 d-flex justify-content-center"></div>
 									<div class="col-lg-12 d-flex justify-content-center">
-            							<button type="submit" class="primary-btn pageclip-form__submit--dark-loader"><span>Receber Contato</span>
+            							<button type="submit" class="primary-btn pageclip-form__submit--dark-loader"><span>Enviar Dados</span>
 									</div>
 								</div>
 							</form>
@@ -214,7 +214,7 @@
 				<div class="col-lg-6">
 					<div class="section-title text-center">
 						<h2>Produz conteúdo e tem audiência engajada?</h2>
-						<p>Com a nossa plataforma você pode criar um canal exclusivo para membros assinantes e
+						<p>Com a nossa plataforma você pode ter um canal exclusivo para membros assinantes e
 							começar a monetizar o seu conteúdo.</p>
 					</div>
 				</div>
@@ -244,9 +244,9 @@
 					<div class="single-feature">
 						<a href="#" class="title">
 							<span class="lnr lnr-smartphone"></span>
-							<h3>Produza conteúdo Exclusivo para os Assinantes</h3>
+							<h3>Acompanhe as inscrições e produza o seu conteúdo</h3>
 						</a>
-						<p>Turbine seu canal com conteúdos relevantes que irão potencializar o engajamento da sua audiência.
+						<p>Nós controlamos a entrada e saída de membros e você se preocupa apenas com o seu conteúdo.
 						</p>
 					</div>
 				</div>
@@ -285,7 +285,7 @@
 				<div class="col-lg-6">
 					<div class="section-title text-center">
 						<h2>Começe agora</h2>
-						<p>Você pode começar o seu canal de assinantes sem nenhum custo
+						<p>Você pode começar a ter o seu canal de membros exclusivos sem nenhum custo
 						</p>
 					</div>
 				</div>
@@ -383,7 +383,7 @@
 				<div class="col-lg-3 col-md-6 single-footer-widget">
 					<h4>Produto</h4>
 					<ul>
-						<li><a href="#home">Cadastro</a></li>
+						<li><a href="https://forms.gle/VW5kWuJZtyqNa77W7">Cadastro</a></li>
 						<li><a href="#feature">Como funciona</a></li>
 						<li><a href="#about">Benefícios</a></li>
 					</ul>
