--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 			</div>
 			<div class="footer-bottom row text-center">
 				<p class="footer-text m-0 col-lg-12 col-md-12">
-					<script>document.write(new Date().getFullYear());</script> &copy; Membr.club - Todos os direitos
+					<script>document.write(new Date().getFullYear());</script> &copy; Membr Club Tecnologia Ltda - Todos os direitos
 					reservados
 				</p>
 			</div>
