--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="keywords" content="">
 	<meta charset="UTF-8">
 
-	<title>Membr.Club</title>
+	<title>membr.club</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,600|Roboto:400,400i,500" rel="stylesheet">
 	<link rel="stylesheet" href="css/linearicons.css">
@@ -45,6 +45,21 @@
 </head>
 
 <body>
+	
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/5f3ef31d1e7ade5df442a34f/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
+	
 	<!-- start header Area -->
 	<header id="header">
 		<div class="container main-menu">
