--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 				<div class="col-lg-3 col-md-6 single-footer-widget">
 					<h4>Aprenda</h4>
 					<ul>
-						<li><a href="https://membrclub.tawk.help">Suporte</a></li>
+						<li><a href="https://membr.tawk.help/">Suporte</a></li>
 						<li><a href="#">Contato</a></li>
 					</ul>
 				</div>
