--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta charset="UTF-8">
+	
+	<meta charset="UTF-8">
+     	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+     	<meta name="description"
+        content="Monetize seu conhecimento: Saiba como transformar o seu canal privado do Telegram em uma poderosa comunidade de membros engajados.">
+     	<meta name="keywords" content="Telegram, Canal, Exclusivo, Comunidade, Membros, Engajamento, Monetização">
+     	<meta name="author" content="membr.club">
+     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+     	<meta property="og:title" content="membr.club">
+     	<meta property="og:description"
+         content="Monetize seu conhecimento: Saiba como transformar o seu canal privado do Telegram em uma poderosa comunidade de membros engajados.">
+     	<meta property="og:image" content="https://membr.club/favicon/favicon-96x96.png">
+     	<meta property="og:url" content="https://membr.club">
 
 	<title>membr.club</title>
 
