--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      	<meta property="og:title" content="membr.club">
      	<meta property="og:description"
          content="Monetize seu conhecimento: Saiba como transformar o seu canal privado do Telegram em uma poderosa comunidade de membros engajados.">
-     	<meta property="og:image" content="https://membr.club/favicon/favicon-96x96.png">
+     	<meta property="og:image" content="https://www.membr.club/images/membr.jpg">
      	<meta property="og:url" content="https://membr.club">
 
 	<title>membr.club</title>
