--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
 	<link rel="manifest" href="/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<meta name="author" content="codepixer">
 	<meta name="description" content="">
@@ -31,12 +31,12 @@
      	<meta name="description"
         content="Monetize seu conhecimento: Saiba como transformar o seu canal privado do Telegram em uma poderosa comunidade de membros engajados.">
      	<meta name="keywords" content="Telegram, Canal, Exclusivo, Comunidade, Membros, Engajamento, Monetização">
-     	<meta name="author" content="membr.club">
+     	<meta name="author" content="Membr Club Tecnologia">
      	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-     	<meta property="og:title" content="membr.club">
+     	<meta property="og:title" content="Membr Club">
      	<meta property="og:description"
          content="Monetize seu conhecimento: Saiba como transformar o seu canal privado do Telegram em uma poderosa comunidade de membros engajados.">
-     	<meta property="og:image" content="https://www.membr.club/img/membr.jpeg">
+     	<meta property="og:image" content="https://membr.club/img/squarelogo.png">
      	<meta property="og:url" content="https://membr.club">
 
 	<title>membr.club</title>
