--- a/index.html
+++ b/index.html
@@ -470,10 +470,19 @@
 	</script>
 		
 
-		
-	<!-- Start of cajuteste Zendesk Widget script -->
-	<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=7f7ae3de-39fb-482f-93c9-8e389f4e73d6"> </script>
-	<!-- End of cajuteste Zendesk Widget script -->
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/5f3f1e1c1e7ade5df442a99c/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 
 </body>
 
