--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+	
+	<!-- Pixel Code for https://www.nooty.com.br/ -->
+	<script async src="https://www.nooty.com.br/pixel/z0v5815hl2cw6sn2b8x1kzkd1q4c7fg1"></script>
+	<!-- END Pixel Code -->
 
 
 
