--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 	<!-- Pixel Code for https://www.nooty.com.br/ -->
 	<script async src="https://www.nooty.com.br/pixel/z0v5815hl2cw6sn2b8x1kzkd1q4c7fg1"></script>
 	<!-- END Pixel Code -->
+	
+	<script type="text/javascript" src="https://load.fomo.com/api/v1/yGiT2Ag_EdDzqhkGuckYiA/load.js" async></script>
 
 
 
