--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
 	<!-- END Pixel Code -->
 	
 	<script type="text/javascript" src="https://load.fomo.com/api/v1/yGiT2Ag_EdDzqhkGuckYiA/load.js" async></script>
+	
+	<script id="navegg" type="text/javascript">
+  (function(n,v,g){o="Navegg";if(!n[o]){
+    a=v.createElement('script');a.src=g;b=document.getElementsByTagName('script')[0];
+    b.parentNode.insertBefore(a,b);n[o]=n[o]||function(parms){
+    n[o].q=n[o].q||[];n[o].q.push([this, parms])};}})
+  (window, document, 'https://tag.navdmp.com/universal.min.js');
+  window.naveggReady = window.naveggReady||[];
+  window.nvg77362 = new Navegg({
+    acc: 77362
+  });
+</script>
 
 
 
